WIP: testing antecedent data creation

--- a/train.ipynb
+++ b/train.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,13 +57,108 @@
        "'2.7.4'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tf.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def create_antecedent_inputs_ordered(\n",
+    "    df_inputs: pd.DataFrame,\n",
+    "    ndays: int = 8,          # will create 1d..7d (since 0d is the original column)\n",
+    "    window_size: int = 11,\n",
+    "    nwindows: int = 10,      # will create 1ave..10ave\n",
+    "    predictors_order=None,\n",
+    "    date_col: str = \"date\",\n",
+    "):\n",
+    "    \n",
+    "    # --- set predictor order\n",
+    "    if predictors_order is None:\n",
+    "        predictors_order = df_inputs.columns.tolist()\n",
+    "\n",
+    "    # --- require DatetimeIndex for the time-based rolling/shifts\n",
+    "    if not isinstance(df_inputs.index, pd.DatetimeIndex):\n",
+    "        raise ValueError(\"df_inputs must have a DatetimeIndex (set date as index first).\")\n",
+    "\n",
+    "    df_inputs = df_inputs.sort_index()\n",
+    "\n",
+    "    out = pd.DataFrame(index=df_inputs.index)\n",
+    "\n",
+    "    # 1) date column first (as a column, not index)\n",
+    "    out[date_col] = df_inputs.index\n",
+    "\n",
+    "    # 2) original predictors next\n",
+    "    for p in predictors_order:\n",
+    "        out[p] = df_inputs[p]\n",
+    "\n",
+    "    # 3) daily antecedents grouped by lag: 1d..(ndays-1)d\n",
+    "    for d in range(1, ndays):\n",
+    "        for p in predictors_order:\n",
+    "            out[f\"{p}_{d}d\"] = df_inputs[p].shift(d)\n",
+    "\n",
+    "    # 4) rolling averages grouped by window number: 1ave..nwindows_ave\n",
+    "    # Rolling mean over a time window (requires daily-ish datetime index)\n",
+    "    for p in predictors_order:\n",
+    "        out[f\"__tmp_ma__{p}\"] = df_inputs[p].rolling(f\"{window_size}D\", min_periods=window_size).mean()\n",
+    "\n",
+    "    for k in range(1, nwindows + 1):\n",
+    "        shift_days = ndays + window_size * (k - 1)\n",
+    "        for p in predictors_order:\n",
+    "            out[f\"{p}_{k}ave\"] = out[f\"__tmp_ma__{p}\"].shift(shift_days, freq=\"D\")\n",
+    "\n",
+    "    # remove temp columns\n",
+    "    out = out.drop(columns=[f\"__tmp_ma__{p}\" for p in predictors_order])\n",
+    "\n",
+    "    # drop rows that are incomplete due to shifting/rolling\n",
+    "    out = out.dropna().reset_index(drop=True)\n",
+    "\n",
+    "    return out\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "\n",
+    "in_path = './Inputs/inputs_r.csv'\n",
+    "df = pd.read_csv(in_path)\n",
+    "\n",
+    "# date column → index\n",
+    "df[\"date\"] = pd.to_datetime(df[\"date\"])\n",
+    "df = df.sort_values(\"date\").set_index(\"date\")\n",
+    "\n",
+    "# inputs only (exclude last column = output)\n",
+    "X = df.iloc[:, :-1].copy()\n",
+    "\n",
+    "predictors = [\"dcc\", \"exports\", \"sac\", \"sjr\", \"tide\", \"net_dcd\", \"smscg\"]\n",
+    "\n",
+    "ante = create_antecedent_inputs_ordered(\n",
+    "    X,\n",
+    "    ndays=8,\n",
+    "    window_size=11,\n",
+    "    nwindows=10,\n",
+    "    predictors_order=predictors,\n",
+    "    date_col=\"date\",\n",
+    ")\n",
+    "\n",
+    "ante.to_csv('./Inputs/inputs_antecedents_ordered.csv', index=False)\n"
    ]
   },
   {
