separated x2 training from EC training

--- a/train_X2.ipynb
+++ b/train_X2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -33,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "import EC_estimator as annec"
+    "import EC_estimator as annx2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import matplotlib.pyplot as plt\n",
     "from tabulate import tabulate\n",
-    "import EC_estimator as annec\n",
+    "import X2_estimator as annx2\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import Dense, Input\n",
     "from tensorflow.keras.layers.experimental import preprocessing\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
      "output_type": "stream",
      "text": [
       "CWD: E:\\ANN-Phase-II\\cs3-surrogate-training\n",
-      "Inputs contents: ['inputs.csv', 'selected.csv', 'x2_data_in.csv', 'x2_data_out.csv']\n"
+      "Inputs contents: ['inputs.csv', 'selected.csv', 'x2_data_in.csv', 'x2_data_out.csv', 'x2_inputs_antecedents_ordered.csv', 'x2_inputs_antecedents_ordered_with_output.csv']\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -223,50 +223,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "df_test is empty. Check that the index is datetime and dates exist in 1923–1939.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 27\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# Optional sanity checks\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m df_test\u001b[38;5;241m.\u001b[39mempty:\n\u001b[1;32m---> 27\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdf_test is empty. Check that the index is datetime and dates exist in 1923–1939.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m df_train\u001b[38;5;241m.\u001b[39mempty:\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdf_train is empty. Check that the index is datetime and dates exist in 1940–2015.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: df_test is empty. Check that the index is datetime and dates exist in 1923–1939."
+     ]
+    }
+   ],
    "source": [
     "# Load data\n",
-    "df = annec.load_data('Inputs/inputs.csv')\n",
-    "df_var = annec.df_by_variable(df)\n",
+    "df = annx2.load_data('Inputs/x2_inputs_antecedents_ordered_with_output.csv')\n",
+    "df_var = annx2.df_by_variable(df)\n",
     "\n",
     "\n",
     "\n",
-    "# Split data\n",
-    "train_rows = df_var.shape[0] - 6039\n",
-    "df_train, df_test = annec.split_data(df_var, train_rows, 6039)\n",
+    "# Split by date ranges\n",
+    "# ----------------------------\n",
+    "# df_var likely has a MultiIndex columns and a datetime-like index\n",
+    "# Ensure index is datetime\n",
+    "if not isinstance(df_var.index, pd.DatetimeIndex):\n",
+    "    df_var.index = pd.to_datetime(df_var.index, errors=\"raise\")\n",
+    "\n",
+    "df_var = df_var.sort_index()\n",
+    "\n",
+    "# Define date ranges\n",
+    "test_start  = \"1923-01-01\"\n",
+    "test_end    = \"1939-12-31\"\n",
+    "train_start = \"1940-01-01\"\n",
+    "train_end   = \"2015-12-31\"\n",
+    "\n",
+    "df_test  = df_var.loc[test_start:test_end].copy()\n",
+    "df_train = df_var.loc[train_start:train_end].copy()\n",
+    "\n",
+    "# Optional sanity checks\n",
+    "if df_test.empty:\n",
+    "    raise ValueError(\"df_test is empty. Check that the index is datetime and dates exist in 1923–1939.\")\n",
+    "if df_train.empty:\n",
+    "    raise ValueError(\"df_train is empty. Check that the index is datetime and dates exist in 1940–2015.\")\n",
+    "\n",
+    "print(\"Train:\", df_train.index.min().date(), \"→\", df_train.index.max().date(), \"rows:\", len(df_train))\n",
+    "print(\"Test :\", df_test.index.min().date(),  \"→\", df_test.index.max().date(),  \"rows:\", len(df_test))\n",
     "\n",
     "# Build model inputs\n",
-    "inputs = annec.build_model_inputs(df_var)\n",
+    "inputs = annx2.build_model_inputs(df_var)\n",
     "\n",
     "# Preprocessing layers\n",
-    "layers = annec.preprocessing_layers(df_var, inputs)\n",
+    "layers = annx2.preprocessing_layers(df_var, inputs)\n",
     "\n",
     "# Build model\n",
     "neurons = [8, 2, 1]  # This is an example; adapt it to your needs\n",
     "activations = ['sigmoid', 'sigmoid']\n",
-    "model, tensorboard_cb = annec.build_model(layers, inputs)\n",
+    "model, tensorboard_cb = annx2.build_model(layers, inputs)\n",
     "\n",
     "\n",
-    "X_train = [ df_train.loc[:, pd.IndexSlice[feature,annec.lags_feature[feature]]] for feature in annec.feature_names()]\n",
+    "X_train = [ df_train.loc[:, pd.IndexSlice[feature,annx2.lags_feature[feature]]] for feature in annx2.feature_names()]\n",
     "\n",
-    "y_train = df_train[('EC','0d')].to_frame()  # situation where one column is produced and coerced to a series\n",
+    "y_train = df_train[('X_2_DIS','0d')].to_frame()  # situation where one column is produced and coerced to a series\n",
     "# Otherwise you would do something like:\n",
     "#y.droplevel(level='lag',axis=1).rename(mapper={\"EC\":\"emm_ec\"})\n",
-    "y_train.columns = [\"emm_ec\"]\n",
+    "y_train.columns = [\"X_2_DIS\"]\n",
     "\n",
     "\n",
     "\n",
-    "X_test = [ df_test.loc[:, pd.IndexSlice[feature,annec.lags_feature[feature]]] for feature in annec.feature_names()]\n",
+    "X_test = [ df_test.loc[:, pd.IndexSlice[feature,annx2.lags_feature[feature]]] for feature in annx2.feature_names()]\n",
     "\n",
     "\n",
-    "y_test = df_test[('EC','0d')].to_frame()  # Only works for univariate dataset where it is a series\n",
-    "y_test.columns = [\"emm_ec\"] \n",
+    "y_test = df_test[('X_2_DIS','0d')].to_frame()  # Only works for univariate dataset where it is a series\n",
+    "y_test.columns = [\"X_2_DIS\"] \n",
     "\n",
     "\n",
     "# Train model\n",
-    "history, model = annec.train_model(model, tensorboard_cb, X_train, y_train, X_test, y_test)"
+    "history, model = annx2.train_model(model, tensorboard_cb, X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -278,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -312,12 +347,12 @@
     }
    ],
    "source": [
-    "df = annec.load_data('Inputs/inputs.csv')\n",
+    "df = annx2.load_data('Inputs/inputs.csv')\n",
     "\n",
     "# This will break up the incoming DataFrame into a MultiIndex column\n",
     "# with the site/variable (e.g. Sac) as the 0-level index and\n",
     "# lag (e.g. '3d') as the fast index.\n",
-    "df_var = annec.df_by_variable(df)\n",
+    "df_var = annx2.df_by_variable(df)\n",
     "\n",
     "# This is an illustration of how to extract a single location/variable\n",
     "# so that it (with its lags) can be used as a single input in the ANN. \n",
@@ -340,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +454,7 @@
     "print(X_train[0].iloc[-4:-1])\n",
     "print(X_test[0].iloc[-4:-1])\n",
     "print(\"end predictions\")\n",
-    "metrics.append(annec.calculate_metrics('ANN', y_train, y_train_pred, y_test, y_test_pred))\n",
+    "metrics.append(annx2.calculate_metrics('ANN', y_train, y_train_pred, y_test, y_test_pred))\n",
     "\n",
     "df3 = pd.DataFrame(metrics)\n",
     "\n",
@@ -429,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +479,7 @@
     }
    ],
    "source": [
-    "annec.plot_history(history)"
+    "annx2.plot_history(history)"
    ]
   },
   {
@@ -507,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +560,7 @@
     "############################################################################################\n",
     "\n",
     "model_save_path = r'./Export/emmaton'\n",
-    "annec.save_model(model, model_save_path)"
+    "annx2.save_model(model, model_save_path)"
    ]
   },
   {
@@ -537,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +597,7 @@
     "metrics = []\n",
     "y_train_pred = loaded_model.predict(X_train)\n",
     "y_test_pred = loaded_model.predict(X_test)\n",
-    "metrics.append(annec.calculate_metrics('ANN', y_train, y_train_pred, y_test, y_test_pred))\n",
+    "metrics.append(annx2.calculate_metrics('ANN', y_train, y_train_pred, y_test, y_test_pred))\n",
     "\n",
     "df3 = pd.DataFrame(metrics)\n",
     "print(tabulate(df3, headers='keys', tablefmt='psql'))\n"
