--- a/train_X2.ipynb
+++ b/train_X2.ipynb
@@ -223,24 +223,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "df_test is empty. Check that the index is datetime and dates exist in 1923–1939.",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 1940-01-01 → 2015-09-30 rows: 27667\n",
+      "Test : 1923-04-28 → 1939-12-31 rows: 6092\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "163",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 27\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# Optional sanity checks\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m df_test\u001b[38;5;241m.\u001b[39mempty:\n\u001b[1;32m---> 27\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdf_test is empty. Check that the index is datetime and dates exist in 1923–1939.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m df_train\u001b[38;5;241m.\u001b[39mempty:\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdf_train is empty. Check that the index is datetime and dates exist in 1940–2015.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: df_test is empty. Check that the index is datetime and dates exist in 1923–1939."
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 59\u001b[0m\n\u001b[0;32m     54\u001b[0m model, tensorboard_cb \u001b[38;5;241m=\u001b[39m annx2\u001b[38;5;241m.\u001b[39mbuild_model(layers, inputs)\n\u001b[0;32m     57\u001b[0m X_train \u001b[38;5;241m=\u001b[39m [ df_train\u001b[38;5;241m.\u001b[39mloc[:, pd\u001b[38;5;241m.\u001b[39mIndexSlice[feature,annx2\u001b[38;5;241m.\u001b[39mlags_feature[feature]]] \u001b[38;5;28;01mfor\u001b[39;00m feature \u001b[38;5;129;01min\u001b[39;00m annx2\u001b[38;5;241m.\u001b[39mfeature_names()]\n\u001b[1;32m---> 59\u001b[0m y_train \u001b[38;5;241m=\u001b[39m \u001b[43mdf_train\u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mX_2_DIS\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m0d\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mto_frame()  \u001b[38;5;66;03m# situation where one column is produced and coerced to a series\u001b[39;00m\n\u001b[0;32m     60\u001b[0m \u001b[38;5;66;03m# Otherwise you would do something like:\u001b[39;00m\n\u001b[0;32m     61\u001b[0m \u001b[38;5;66;03m#y.droplevel(level='lag',axis=1).rename(mapper={\"EC\":\"emm_ec\"})\u001b[39;00m\n\u001b[0;32m     62\u001b[0m y_train\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX_2_DIS\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\hzamanis\\AppData\\Local\\miniconda3\\envs\\DOF274\\lib\\site-packages\\pandas\\core\\frame.py:3760\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3758\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_single_key:\n\u001b[0;32m   3759\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m-> 3760\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_getitem_multilevel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3761\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[0;32m   3762\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n",
+      "File \u001b[1;32mc:\\Users\\hzamanis\\AppData\\Local\\miniconda3\\envs\\DOF274\\lib\\site-packages\\pandas\\core\\frame.py:3815\u001b[0m, in \u001b[0;36mDataFrame._getitem_multilevel\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_getitem_multilevel\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# self.columns is a MultiIndex\u001b[39;00m\n\u001b[1;32m-> 3815\u001b[0m     loc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(loc, (\u001b[38;5;28mslice\u001b[39m, np\u001b[38;5;241m.\u001b[39mndarray)):\n\u001b[0;32m   3817\u001b[0m         new_columns \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns[loc]\n",
+      "File \u001b[1;32mc:\\Users\\hzamanis\\AppData\\Local\\miniconda3\\envs\\DOF274\\lib\\site-packages\\pandas\\core\\indexes\\multi.py:2825\u001b[0m, in \u001b[0;36mMultiIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2821\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keylen \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_unique:\n\u001b[0;32m   2822\u001b[0m     \u001b[38;5;66;03m# TODO: what if we have an IntervalIndex level?\u001b[39;00m\n\u001b[0;32m   2823\u001b[0m     \u001b[38;5;66;03m#  i.e. do we need _index_as_unique on that level?\u001b[39;00m\n\u001b[0;32m   2824\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 2825\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2826\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   2827\u001b[0m         \u001b[38;5;66;03m# e.g. test_partial_slicing_with_multiindex partial string slicing\u001b[39;00m\n\u001b[0;32m   2828\u001b[0m         loc, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_loc_level(key, \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnlevels)))\n",
+      "File \u001b[1;32mc:\\Users\\hzamanis\\AppData\\Local\\miniconda3\\envs\\DOF274\\lib\\site-packages\\pandas\\_libs\\index.pyx:832\u001b[0m, in \u001b[0;36mpandas._libs.index.BaseMultiIndexCodesEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\hzamanis\\AppData\\Local\\miniconda3\\envs\\DOF274\\lib\\site-packages\\pandas\\_libs\\index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\hzamanis\\AppData\\Local\\miniconda3\\envs\\DOF274\\lib\\site-packages\\pandas\\_libs\\index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:2152\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.UInt64HashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:2176\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.UInt64HashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 163"
      ]
     }
    ],
    "source": [
     "# Load data\n",
-    "df = annx2.load_data('Inputs/x2_inputs_antecedents_ordered_with_output.csv')\n",
+    "df = annx2.load_data(\"Inputs/x2_inputs_antecedents_ordered_with_output.csv\")\n",
+    "# Parse real dates\n",
+    "df[\"date\"] = pd.to_datetime(df[\"date\"], errors=\"raise\")\n",
+    "\n",
+    "# Sort and set REAL date index\n",
+    "df = df.sort_values(\"date\").set_index(\"date\")\n",
+    "\n",
+    "# Remove date from columns so it is NOT treated as a feature\n",
+    "df = df.drop(columns=[\"date\"], errors=\"ignore\")\n",
+    "\n",
+    "\n",
+    "# Now create (var, lag) MultiIndex columns\n",
     "df_var = annx2.df_by_variable(df)\n",
     "\n",
     "\n",
@@ -286,7 +313,9 @@
     "\n",
     "X_train = [ df_train.loc[:, pd.IndexSlice[feature,annx2.lags_feature[feature]]] for feature in annx2.feature_names()]\n",
     "\n",
-    "y_train = df_train[('X_2_DIS','0d')].to_frame()  # situation where one column is produced and coerced to a series\n",
+    "target = \"X_2_DIS\"\n",
+    "\n",
+    "y_train = df_train.loc[:, pd.IndexSlice[target, :]].iloc[:, 0].to_frame(name=target)\n",
     "# Otherwise you would do something like:\n",
     "#y.droplevel(level='lag',axis=1).rename(mapper={\"EC\":\"emm_ec\"})\n",
     "y_train.columns = [\"X_2_DIS\"]\n",
@@ -296,7 +325,7 @@
     "X_test = [ df_test.loc[:, pd.IndexSlice[feature,annx2.lags_feature[feature]]] for feature in annx2.feature_names()]\n",
     "\n",
     "\n",
-    "y_test = df_test[('X_2_DIS','0d')].to_frame()  # Only works for univariate dataset where it is a series\n",
+    "y_test  = df_test.loc[:,  pd.IndexSlice[target, :]].iloc[:, 0].to_frame(name=target)\n",
     "y_test.columns = [\"X_2_DIS\"] \n",
     "\n",
     "\n",
