--- a/train_EC.ipynb
+++ b/train_EC.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -124,13 +124,12 @@
     "def make_windows(df_raw: pd.DataFrame, predictors, target, window: int):\n",
     "    \"\"\"\n",
     "    Builds:\n",
-    "      X_seq: (N, window, 7)\n",
+    "      X_seq: (N, window, n_predictors)\n",
     "      y:     (N, 1)\n",
     "\n",
-    "    Alignment (recommended): y(t) corresponds to the \"current day\" at the START of the window.\n",
-    "    i.e., window rows are [t, t+1, ..., t+window-1] and y is df_raw[target].iloc[t]\n",
-    "\n",
-    "    If you want y aligned to the END of the window, tell me and I’ll adjust indexing.\n",
+    "    Backward alignment:\n",
+    "      window rows are [t-window+1, ..., t]  (history ending at t)\n",
+    "      y is df_raw[target].iloc[t]\n",
     "    \"\"\"\n",
     "    X_all = df_raw[predictors].to_numpy()\n",
     "    y_all = df_raw[target].to_numpy().reshape(-1, 1)\n",
@@ -140,13 +139,16 @@
     "\n",
     "    Xw = []\n",
     "    yw = []\n",
-    "    for t in range(0, len(df_raw) - window + 1):\n",
-    "        Xw.append(X_all[t:t + window, :])  # (window, 7)\n",
-    "        yw.append(y_all[t])                # (1,)\n",
     "\n",
-    "    X_seq = np.stack(Xw, axis=0)  # (N, window, 7)\n",
-    "    y = np.vstack(yw)             # (N, 1)\n",
+    "    # t is the \"current day\" index\n",
+    "    for t in range(window - 1, len(df_raw)):\n",
+    "        Xw.append(X_all[t - window + 1 : t + 1, :])  # (window, n_predictors), ends at t\n",
+    "        yw.append(y_all[t])                          # target at t\n",
+    "\n",
+    "    X_seq = np.stack(Xw, axis=0)\n",
+    "    y = np.vstack(yw)\n",
     "    return X_seq, y\n",
+    "\n",
     "\n",
     "\n",
     "# ------------------------------------------------------------\n",
@@ -231,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -248,19 +250,12 @@
       " [26. 26. 26. 26. 26. 26. 26. 26. 26. 26.]]\n",
       "test  dcc: [[30. 30. 30. 30. 30. 30. 30. 30. 30. 30.]\n",
       " [30. 30. 30. 30. 30. 30. 30. 30. 30. 30.]\n",
-      " [30. 30. 30. 30. 30. 30. 30. 30. 30. 30.]]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_30408\\2346071757.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;31m# annec.calculate_metrics already handles DataFrames, then can pass y_train/y_test directly.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m metrics.append(\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0mannec\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalculate_metrics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"ANN\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m )\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\hzamanis\\Documents\\Projects\\cs3-surrogate-training\\EC_estimator.py\u001b[0m in \u001b[0;36mcalculate_metrics\u001b[1;34m(model_name, y_train, y_train_pred, y_test, y_test_pred)\u001b[0m\n\u001b[0;32m    217\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    218\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcalculate_metrics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 219\u001b[1;33m     \u001b[0my_train_np\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    220\u001b[0m     \u001b[0my_train_pred_np\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_train_pred\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    221\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'values'"
+      " [30. 30. 30. 30. 30. 30. 30. 30. 30. 30.]]\n",
+      "  Model  Train_R2  Train_RMSE  Train_Percentage_Bias  Test_R2  Test_RMSE  \\\n",
+      "0   ANN      0.98      129.29                   3.75     0.93      287.8   \n",
+      "\n",
+      "   Test_Percentage_Bias  \n",
+      "0                  3.61  \n"
      ]
     }
    ],
@@ -296,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
