Update X2 training: fix IntegerLookup import and add 80/20 validation split

--- a/train_X2.ipynb
+++ b/train_X2.ipynb
@@ -266,29 +266,29 @@
     "# Remove date from columns so it is NOT treated as a feature\n",
     "df = df.drop(columns=[\"date\"], errors=\"ignore\")\n",
     "\n",
-    "\n",
     "# Now create (var, lag) MultiIndex columns\n",
     "df_var = annx2.df_by_variable(df)\n",
     "\n",
-    "\n",
-    "\n",
-    "# Split by date ranges\n",
-    "# ----------------------------\n",
-    "# df_var likely has a MultiIndex columns and a datetime-like index\n",
+    "# Split by date ranges: 1923-1939 for test, 1940-2015 for training\n",
     "# Ensure index is datetime\n",
     "if not isinstance(df_var.index, pd.DatetimeIndex):\n",
     "    df_var.index = pd.to_datetime(df_var.index, errors=\"raise\")\n",
     "\n",
     "df_var = df_var.sort_index()\n",
     "\n",
-    "# Define date ranges\n",
-    "test_start  = \"1923-01-01\"\n",
-    "test_end    = \"1939-12-31\"\n",
-    "train_start = \"1940-01-01\"\n",
-    "train_end   = \"2015-12-31\"\n",
+    "# Split data by year: 1923-1939 for test, 1940-2015 for training\n",
+    "df_test = df_var[(df_var.index.year >= 1923) & (df_var.index.year <= 1939)]\n",
+    "df_train_full = df_var[(df_var.index.year >= 1940) & (df_var.index.year <= 2015)]\n",
     "\n",
-    "df_test  = df_var.loc[test_start:test_end].copy()\n",
-    "df_train = df_var.loc[train_start:train_end].copy()\n",
+    "# Further split training data: 80% for training (calibration), 20% for validation\n",
+    "# Using random masks approach similar to annutilsr\n",
+    "calib_prop = 0.8  # 80% of the data for calibration\n",
+    "vset = np.random.rand(df_train_full.shape[0])\n",
+    "train_mask = vset < calib_prop\n",
+    "val_mask = (vset >= calib_prop) & (vset < (calib_prop + 0.2))\n",
+    "\n",
+    "df_train = df_train_full[train_mask]\n",
+    "df_val = df_train_full[val_mask]\n",
     "\n",
     "# Optional sanity checks\n",
     "if df_test.empty:\n",
@@ -297,6 +297,7 @@
     "    raise ValueError(\"df_train is empty. Check that the index is datetime and dates exist in 1940–2015.\")\n",
     "\n",
     "print(\"Train:\", df_train.index.min().date(), \"→\", df_train.index.max().date(), \"rows:\", len(df_train))\n",
+    "print(\"Val  :\", df_val.index.min().date(),   \"→\", df_val.index.max().date(),   \"rows:\", len(df_val))\n",
     "print(\"Test :\", df_test.index.min().date(),  \"→\", df_test.index.max().date(),  \"rows:\", len(df_test))\n",
     "\n",
     "# Build model inputs\n",
@@ -310,27 +311,28 @@
     "activations = ['sigmoid', 'sigmoid']\n",
     "model, tensorboard_cb = annx2.build_model(layers, inputs)\n",
     "\n",
-    "\n",
-    "X_train = [ df_train.loc[:, pd.IndexSlice[feature,annx2.lags_feature[feature]]] for feature in annx2.feature_names()]\n",
+    "# Extract training features and target\n",
+    "X_train = [df_train.loc[:, pd.IndexSlice[feature, annx2.lags_feature[feature]]] for feature in annx2.feature_names()]\n",
     "\n",
     "target = \"X_2_DIS\"\n",
     "\n",
     "y_train = df_train.loc[:, pd.IndexSlice[target, :]].iloc[:, 0].to_frame(name=target)\n",
-    "# Otherwise you would do something like:\n",
-    "#y.droplevel(level='lag',axis=1).rename(mapper={\"EC\":\"emm_ec\"})\n",
     "y_train.columns = [\"X_2_DIS\"]\n",
     "\n",
+    "# Extract validation features and target\n",
+    "X_val = [df_val.loc[:, pd.IndexSlice[feature, annx2.lags_feature[feature]]] for feature in annx2.feature_names()]\n",
     "\n",
+    "y_val = df_val.loc[:, pd.IndexSlice[target, :]].iloc[:, 0].to_frame(name=target)\n",
+    "y_val.columns = [\"X_2_DIS\"]\n",
     "\n",
-    "X_test = [ df_test.loc[:, pd.IndexSlice[feature,annx2.lags_feature[feature]]] for feature in annx2.feature_names()]\n",
+    "# Extract test features and target\n",
+    "X_test = [df_test.loc[:, pd.IndexSlice[feature, annx2.lags_feature[feature]]] for feature in annx2.feature_names()]\n",
     "\n",
+    "y_test = df_test.loc[:, pd.IndexSlice[target, :]].iloc[:, 0].to_frame(name=target)\n",
+    "y_test.columns = [\"X_2_DIS\"]\n",
     "\n",
-    "y_test  = df_test.loc[:,  pd.IndexSlice[target, :]].iloc[:, 0].to_frame(name=target)\n",
-    "y_test.columns = [\"X_2_DIS\"] \n",
-    "\n",
-    "\n",
-    "# Train model\n",
-    "history, model = annx2.train_model(model, tensorboard_cb, X_train, y_train, X_test, y_test)"
+    "# Train model with validation data\n",
+    "history, model = annx2.train_model(model, tensorboard_cb, X_train, y_train, X_val, y_val)"
    ]
   },
   {
