Implement end-to-end scaling within TensorFlow model: MinMax [0.1, 0.9] for inputs and outputs

--- a/train_EC.ipynb
+++ b/train_EC.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "import EC_estimator as annec\n",
     "\n",
@@ -257,6 +256,7 @@
     "\n",
     "# ------------------------------------------------------------\n",
     "# Build raw windows (118 days × 7 predictors)\n",
+    "# NO scaling done here - it's built into the model!\n",
     "# ------------------------------------------------------------\n",
     "X_train_seq, y_train_arr = make_windows(df_train_raw, predictors, target, WINDOW)\n",
     "X_test_seq,  y_test_arr  = make_windows(df_test_raw,  predictors, target, WINDOW)\n",
@@ -265,62 +265,62 @@
     "X_train = [X_train_seq[:, :, i] for i in range(len(predictors))]\n",
     "X_test  = [X_test_seq[:, :, i]  for i in range(len(predictors))]\n",
     "\n",
-    "# Targets as DataFrame (keeps your existing train_model interface happy)\n",
+    "# Targets as DataFrame\n",
     "y_train = pd.DataFrame(y_train_arr, columns=[target])\n",
     "y_test  = pd.DataFrame(y_test_arr,  columns=[target])\n",
     "\n",
-    "print(\"X_train shapes:\", [x.shape for x in X_train])  # expect 7 × (N,118)\n",
+    "print(\"\\nX_train shapes:\", [x.shape for x in X_train])  # expect 7 × (N,118)\n",
     "print(\"y_train shape :\", y_train.shape)\n",
-    "print(f\"y_train range: [{y_train.values.min():.1f}, {y_train.values.max():.1f}]\")\n",
-    "print(f\"y_test range:  [{y_test.values.min():.1f}, {y_test.values.max():.1f}]\")\n",
+    "print(f\"y_train range (original): [{y_train.values.min():.1f}, {y_train.values.max():.1f}]\")\n",
+    "print(f\"y_test range (original) : [{y_test.values.min():.1f}, {y_test.values.max():.1f}]\")\n",
     "\n",
     "\n",
     "# ------------------------------------------------------------\n",
-    "# Scale targets to [0.1, 0.9] (matching original annutilsr approach)\n",
-    "# ------------------------------------------------------------\n",
-    "y_scaler = MinMaxScaler(feature_range=(0.1, 0.9))\n",
-    "y_scaler.fit(y_train)  # Fit on training data ONLY (no leakage)\n",
-    "\n",
-    "y_train_scaled = pd.DataFrame(\n",
-    "    y_scaler.transform(y_train), \n",
-    "    index=y_train.index, \n",
-    "    columns=y_train.columns\n",
-    ")\n",
-    "y_test_scaled = pd.DataFrame(\n",
-    "    y_scaler.transform(y_test), \n",
-    "    index=y_test.index, \n",
-    "    columns=y_test.columns\n",
-    ")\n",
-    "\n",
-    "print(f\"\\nScaled y_train range: [{y_train_scaled.values.min():.4f}, {y_train_scaled.values.max():.4f}]\")\n",
-    "print(f\"Scaled y_test range:  [{y_test_scaled.values.min():.4f}, {y_test_scaled.values.max():.4f}]\")\n",
-    "\n",
-    "\n",
-    "# ------------------------------------------------------------\n",
-    "# Build model (inputs are now raw 118-day vectors)\n",
+    "# Build model with BUILT-IN scaling layers\n",
+    "# All scaling happens inside the model now!\n",
+    "# Input: raw values -> MinMax scale [0.1,0.9] -> antecedents -> norm\n",
+    "# Output: scaled [0.1,0.9]\n",
+    "# Target: scaled [0.1,0.9]\n",
     "# ------------------------------------------------------------\n",
     "# Build model inputs (should create 7 Input(shape=(118,), ...))\n",
     "inputs = annec.build_model_inputs(None)\n",
     "\n",
-    "# Preprocessing layers:\n",
-    "# IMPORTANT: normalize using TRAIN only (no leakage).\n",
-    "layers = annec.preprocessing_layers(df_train_raw, inputs, X_train)\n",
+    "# Preprocessing layers now include input scaling!\n",
+    "# Returns: (layers, scale_layers)\n",
+    "layers, scale_layers = annec.preprocessing_layers(df_train_raw, inputs, X_train)\n",
     "\n",
-    "neurons = [8, 2, 1]\n",
-    "activations = [\"sigmoid\", \"sigmoid\"]\n",
-    "model, tensorboard_cb = annec.build_model(layers, inputs)\n",
+    "print(f\"\\nBuilt {len(layers)} input preprocessing layers with MinMax scaling [0.1, 0.9]\")\n",
+    "\n",
+    "# Build model with output scaling\n",
+    "# Pass y_train so the output scaler can adapt to target range\n",
+    "model, tensorboard_cb = annec.build_model(layers, inputs, y_train=y_train)\n",
     "\n",
     "print(\"\\nModel summary:\")\n",
     "model.summary()\n",
     "\n",
+    "# Create scaled targets for training\n",
+    "y_train_scaled = annec.MinMaxScaleLayer(feature_range=(0.1, 0.9), name=\"temp_y_scale\")\n",
+    "y_train_scaled.adapt(y_train.values)\n",
+    "y_train_scaled_vals = y_train_scaled(tf.constant(y_train.values, dtype=tf.float32)).numpy()\n",
+    "\n",
+    "y_test_scaled = annec.MinMaxScaleLayer(feature_range=(0.1, 0.9), name=\"temp_y_scale_test\")\n",
+    "y_test_scaled.adapt(y_train.values)  # Adapt to TRAIN range only!\n",
+    "y_test_scaled_vals = y_test_scaled(tf.constant(y_test.values, dtype=tf.float32)).numpy()\n",
+    "\n",
+    "print(f\"\\nScaled y_train range: [{y_train_scaled_vals.min():.4f}, {y_train_scaled_vals.max():.4f}]\")\n",
+    "print(f\"Scaled y_test range : [{y_test_scaled_vals.min():.4f}, {y_test_scaled_vals.max():.4f}]\")\n",
+    "\n",
     "\n",
     "# ------------------------------------------------------------\n",
     "# Train with SCALED targets\n",
+    "# Model inputs are raw, model outputs are scaled [0.1, 0.9]\n",
+    "# Targets are scaled [0.1, 0.9]\n",
+    "# Everything matches!\n",
     "# ------------------------------------------------------------\n",
     "history, model = annec.train_model(\n",
     "    model, tensorboard_cb, \n",
-    "    X_train, y_train_scaled,   # Use scaled targets\n",
-    "    X_test, y_test_scaled,     # Use scaled validation targets\n",
+    "    X_train, y_train_scaled_vals,   # Use scaled targets\n",
+    "    X_test, y_test_scaled_vals,     # Use scaled validation targets\n",
     "    epochs=1000,\n",
     "    patience=1000,\n",
     "    batch_size=128\n",
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -363,17 +363,21 @@
    ],
    "source": [
     "# Calculate metrics for ANN\n",
-    "# Model outputs are in SCALED space [0.1, 0.9], so inverse-transform to original EC units\n",
+    "# The trained model outputs scaled predictions [0.1, 0.9]\n",
+    "# We create an inference model that automatically inverse-transforms to original units\n",
     "\n",
     "metrics = []\n",
     "\n",
-    "# Predict (scaled outputs)\n",
+    "# Predict with trained model (outputs are scaled [0.1, 0.9])\n",
     "y_train_pred_scaled = model.predict(X_train, verbose=0)\n",
     "y_test_pred_scaled  = model.predict(X_test, verbose=0)\n",
     "\n",
-    "# Inverse-transform to original EC units\n",
-    "y_train_pred = y_scaler.inverse_transform(y_train_pred_scaled)\n",
-    "y_test_pred  = y_scaler.inverse_transform(y_test_pred_scaled)\n",
+    "# Create inference model with automatic inverse scaling\n",
+    "inference_model = annec.create_inference_model(model)\n",
+    "\n",
+    "# Predict with inference model (outputs are original units)\n",
+    "y_train_pred = inference_model.predict(X_train, verbose=0)\n",
+    "y_test_pred  = inference_model.predict(X_test, verbose=0)\n",
     "\n",
     "print(\"=== Predictions (original EC units, last 3 samples) ===\")\n",
     "print(\"train:\", y_train_pred[-3:].ravel())\n",
@@ -382,6 +386,10 @@
     "print(\"\\n=== Scaled predictions range ===\")\n",
     "print(f\"y_train_pred_scaled: [{y_train_pred_scaled.min():.4f}, {y_train_pred_scaled.max():.4f}]\")\n",
     "print(f\"y_test_pred_scaled:  [{y_test_pred_scaled.min():.4f}, {y_test_pred_scaled.max():.4f}]\")\n",
+    "\n",
+    "print(\"\\n=== Original unit predictions range ===\")\n",
+    "print(f\"y_train_pred: [{y_train_pred.min():.1f}, {y_train_pred.max():.1f}]\")\n",
+    "print(f\"y_test_pred : [{y_test_pred.min():.1f}, {y_test_pred.max():.1f}]\")\n",
     "\n",
     "# Compute metrics using original (unscaled) values\n",
     "y_train_true = y_train.values  # Original EC values\n",
@@ -470,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,11 +499,16 @@
     "model_save_path = r'./Export/emmaton'\n",
     "annec.save_model(model, model_save_path)\n",
     "\n",
-    "# Save the y_scaler for inference (needed to inverse-transform predictions)\n",
-    "import os\n",
-    "scaler_path = os.path.join(model_save_path, 'y_scaler.pkl')\n",
-    "annec.save_scaler(y_scaler, scaler_path)\n",
-    "print(f\"y_scaler saved at: {scaler_path}\")"
+    "# Also save the inference model (with inverse scaling built-in)\n",
+    "inference_model_path = os.path.join(model_save_path, 'inference_model')\n",
+    "inference_model.save(inference_model_path)\n",
+    "\n",
+    "print(f\"Training model (scaled output) saved at: {model_save_path}\")\n",
+    "print(f\"Inference model (original units) saved at: {inference_model_path}\")\n",
+    "print(\"\\nNote: All scaling layers are now built into the TensorFlow model!\")\n",
+    "print(\"- Input scaling [0.1, 0.9] is applied to each feature's 118-day window\")\n",
+    "print(\"- Output scaling [0.1, 0.9] is applied to EC predictions during training\")\n",
+    "print(\"- Inference model automatically inverse-scales outputs to original EC units\")"
    ]
   },
   {
@@ -523,25 +536,35 @@
     }
    ],
    "source": [
-    "# Load saved model and evaluate\n",
-    "loaded_model = tf.keras.models.load_model(model_save_path)\n",
+    "# Load saved models with custom layers\n",
+    "custom_objects = {\n",
+    "    'MinMaxScaleLayer': annec.MinMaxScaleLayer,\n",
+    "    'InverseMinMaxScaleLayer': annec.InverseMinMaxScaleLayer\n",
+    "}\n",
     "\n",
-    "# Load the y_scaler\n",
-    "import os\n",
-    "scaler_path = os.path.join(model_save_path, 'y_scaler.pkl')\n",
-    "y_scaler_loaded = annec.load_scaler(scaler_path)\n",
+    "# Load training model (outputs scaled [0.1, 0.9])\n",
+    "loaded_model = tf.keras.models.load_model(model_save_path, custom_objects=custom_objects)\n",
     "\n",
-    "# Calculate metrics for ANN\n",
+    "# Load inference model (outputs original units)\n",
+    "inference_model_path = os.path.join(model_save_path, 'inference_model')\n",
+    "loaded_inference_model = tf.keras.models.load_model(inference_model_path, custom_objects=custom_objects)\n",
+    "\n",
+    "# Calculate metrics using inference model (original units)\n",
     "metrics = []\n",
     "\n",
-    "# Predict (scaled) and inverse-transform\n",
+    "# Predict with scaled model\n",
     "y_train_pred_scaled = loaded_model.predict(X_train, verbose=0)\n",
-    "y_test_pred_scaled  = loaded_model.predict(X_test, verbose=0)\n",
+    "y_test_pred_scaled = loaded_model.predict(X_test, verbose=0)\n",
     "\n",
-    "y_train_pred = y_scaler_loaded.inverse_transform(y_train_pred_scaled)\n",
-    "y_test_pred  = y_scaler_loaded.inverse_transform(y_test_pred_scaled)\n",
+    "# Predict with inference model (original units)\n",
+    "y_train_pred = loaded_inference_model.predict(X_train, verbose=0)\n",
+    "y_test_pred = loaded_inference_model.predict(X_test, verbose=0)\n",
     "\n",
-    "metrics.append(annec.calculate_metrics('ANN', y_train, y_train_pred, y_test, y_test_pred))\n",
+    "print(\"=== Loaded Models Evaluation ===\")\n",
+    "print(f\"Training model output range (scaled):  [{y_train_pred_scaled.min():.4f}, {y_train_pred_scaled.max():.4f}]\")\n",
+    "print(f\"Inference model output range (original): [{y_train_pred.min():.1f}, {y_train_pred.max():.1f}]\")\n",
+    "\n",
+    "metrics.append(annec.calculate_metrics('ANN (Loaded)', y_train, y_train_pred, y_test, y_test_pred))\n",
     "\n",
     "df3 = pd.DataFrame(metrics)\n",
     "print(tabulate(df3, headers='keys', tablefmt='psql'))"
@@ -559,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -578,12 +601,15 @@
     }
    ],
    "source": [
-    "# Load saved model and test with a standalone sample\n",
-    "loaded_model = tf.keras.models.load_model(model_save_path)\n",
+    "# Load saved models with custom layers\n",
+    "custom_objects = {\n",
+    "    'MinMaxScaleLayer': annec.MinMaxScaleLayer,\n",
+    "    'InverseMinMaxScaleLayer': annec.InverseMinMaxScaleLayer\n",
+    "}\n",
     "\n",
-    "# Load the y_scaler for inverse transform\n",
-    "scaler_path = os.path.join(model_save_path, 'y_scaler.pkl')\n",
-    "y_scaler_loaded = annec.load_scaler(scaler_path)\n",
+    "# Load inference model (outputs original units directly)\n",
+    "inference_model_path = os.path.join(model_save_path, 'inference_model')\n",
+    "loaded_inference_model = tf.keras.models.load_model(inference_model_path, custom_objects=custom_objects)\n",
     "\n",
     "# Load sample: 118 rows × 7 columns (one column per predictor)\n",
     "df_sample = pd.read_csv(\"Inputs/selected_EC_7_feature.csv\")\n",
@@ -605,14 +631,16 @@
     "print(f\"\\nReshaped CSV saved: Inputs/selected_EC_7_feature_reshaped.csv\")\n",
     "print(f\"Shape: {df_reshaped.shape} (7 predictors × 118 days)\")\n",
     "\n",
-    "# Predict (scaled output)\n",
-    "y_sample_pred_scaled = loaded_model.predict(X_sample, verbose=0)\n",
+    "# Predict with inference model (outputs in original EC units)\n",
+    "y_sample_pred = loaded_inference_model.predict(X_sample, verbose=0)\n",
     "\n",
-    "# Inverse-transform to original EC units\n",
-    "y_sample_pred = y_scaler_loaded.inverse_transform(y_sample_pred_scaled)\n",
-    "\n",
-    "print(f\"\\nPredicted EC (scaled): {y_sample_pred_scaled[0, 0]:.4f}\")\n",
-    "print(f\"Predicted EC (original units): {y_sample_pred[0, 0]:.1f}\")"
+    "print(f\"\\n=== Prediction Results ===\")\n",
+    "print(f\"Predicted EC (original units): {y_sample_pred[0, 0]:.1f}\")\n",
+    "print(f\"\\nNote: All scaling is handled internally by the model:\")\n",
+    "print(f\"  1. Input raw values → scaled [0.1, 0.9]\")\n",
+    "print(f\"  2. Antecedents extracted and normalized\")\n",
+    "print(f\"  3. Model inference\")\n",
+    "print(f\"  4. Output inverse-scaled back to original EC units\")"
    ]
   }
  ],
